# bazel-nuxt-containerized

./: README.md  WORKSPACE
app/: BUILD.bazel  WORKSPACE  package-lock.json
